[tool.poetry]
name = "autoreport"
version = "0.1.0"
description = "gerador de relatório em LaTex"
authors = ["João Felipe <B51067@fgv.edu.br>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
